--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.3.0",
+    "body-parser": "^1.14.2",
     "ent": "^2.2.0",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
+    "express-socket.io-session": "^1.3.1",
     "jade": "^1.11.0",
+    "mongodb": "^2.1.4",
     "session.socket.io": "^0.2.1",
     "socket.io": "^1.4.4"
   }
